--- a/LifeCycle/app/src/main/res/values/strings.xml
+++ b/LifeCycle/app/src/main/res/values/strings.xml
@@ -6,5 +6,10 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_second">SecondActivity</string>
+    <string-array name="operating_systems">
+        <item>Ubuntu</item>
+        <item>Android</item>
+        <item>iOS</item>
+    </string-array>
 
 </resources>
